# DealBuddy

./: .gitignore  .nojekyll  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: styles.css
assets/css/: site.css
assets/js/: site.js
docs/: THIRD_PARTY_ASSETS.md
docs/brand/: README.md
extension/dealbuddy-capture/: README.md  auto-capture-utils.js  content-script.js  content-style.css  manifest.json  ocr-cache-utils.mjs  ocr-frame-utils.mjs  ocr-frame.html  ocr-frame.js  ocr-utils.js  popup.html  popup.js  settings-utils.js  sku-utils.js
privacy/: index.html
skills/dealbuddy/: SKILL.md
src/dealbuddy/: __init__.py  cli.py  config.py  intake.py  matching.py  models.py  normalization.py  price.py  ranking.py  reporting.py  requirements.py  research.py  search.py  session.py  web.py
tests/: test_cli.py  test_intake.py  test_intake_server.py  test_matching.py  test_mcp_server.py  test_normalization.py  test_open_source_readiness.py  test_price.py  test_requirements.py  test_research_reporting.py  test_search_ranking.py  test_session.py  test_web_api.py
tests/extension/: auto-capture-utils.test.cjs  content-script-contract.test.cjs  manifest.test.cjs  ocr-frame-contract.test.cjs  ocr-frame-utils.test.cjs  ocr-utils.test.cjs  settings-utils.test.cjs  sku-utils.test.cjs
tests/fixtures/: jd_missing_fields.html  jd_search.html  product_detail.html  taobao_search.html
(+7 files in other folders)
