[project]
name = "dealbuddy"
version = "0.1.0"
description = "Local shopping research: manual capture (browser extension) + local intake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "mcp>=1.27,<2",
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
dealbuddy = "dealbuddy.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dealbuddy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
